--- a/css/main.css
+++ b/css/main.css
@@ -50,45 +50,17 @@
 
     .container-tablet {
          width: 100%;
+         max-width: 992px;
          margin: 0px auto;
          position: relative;
     }
 
-    .container-tablet img{
-        width: 100%;
-        margin: 0px auto;
-        position: relative;
-   }
-
-    /* Style for container of image medium */
-
-    [alt="night"] {
+    .container-tablet img {
         display: block;
-        width: 100%;
-        height: 100vh;
-    }
-    
-    /* [alt="kitten-small"] {
-        display: inline-block;
-        position: absolute;
-        width: 66%;
-        height: 44%;
-        top: 68%;
-        left: 37%;
-        transform: translateX(-30%) translateY(-30%);
-    } */
-
-    /* Style for container of image medium and large */
-
-    .container-cell img  {
-        display: none;
-    }
-    
-    .container-desk img  {
-        display: none;
-    }
- } /*sm*/
+   }
+ } 
 
  @media (min-width:992px) {
-
- } /*md */
+     
+   
+ } 
