--- a/css/main.css
+++ b/css/main.css
@@ -58,6 +58,33 @@
     .container-tablet img {
         display: block;
    }
+
+    /* Style for container of image medium */
+
+    [alt="night"] {
+        width: 100%;
+        height: 100vh;
+    }
+    
+    [alt="kitten-small"] {
+        display: inline-block;
+        position: absolute;
+        width: 40%;
+        height: 50%;
+        top: 65%;
+        left: 37%;
+        transform: translateX(-30%) translateY(-30%);
+    }
+
+    /* Style for container of image medium and large */
+
+    .container-cell img  {
+        display: none;
+    }
+    
+    .container-desk img  {
+        display: none;
+    }
  } 
 
  @media (min-width:992px) {
