--- a/css/main.css
+++ b/css/main.css
@@ -89,5 +89,42 @@
 
  @media (min-width:992px) {
      
+     /* Styles for container */
+
+    .container-desk {
+        width: 100%;
+        margin: 0px auto;
+        position: relative;
+   }
+
+   .container-desk img {
+       display: block;
+  }
+
+   /* Style for container of image medium */
+
+   [alt="sunny-day"] {
+       width: 100%;
+       height: 100vh;
+   }
    
+   [alt="kitten-medium"] {
+       display: inline-block;
+       position: absolute;
+       width: 40%;
+       height: 50%;
+       top: 65%;
+       left: 37%;
+       transform: translateX(-30%) translateY(-30%);
+   }
+
+   /* Style for container of image medium and large */
+
+   .container-cell img  {
+       display: none;
+   }
+   
+   .container-tablet img  {
+       display: none;
+   }
  } 
